# sdmm

./: .env  .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  sdmm-config-sample.ron
.cargo/: config.toml
.sqlx/: query-0667ce1104155c5360b5135050a447c9016d895cf994c5cda610c69f7dfc6b7d.json  query-0a01511a71247bed07e853413781d46ecb6808ad07e8e4831fef2fe016922a07.json  query-152728302811d913ad80f64cb2a62c7dc73f9a94cf6150c3fa1580f5ba59367b.json  query-15e87c0f91701390cbd58482076616e1ce2849cbf5ff1b70a63b809c136e5b2b.json  query-17353c43a7fdb4fd832e7973b756dcfa69f5dc5247e4d9713fb9f85c3c07bc20.json  query-1767054cec0c28836c19bc622e48d1d6fadc19af54131b2397cf81cadd2f2a36.json  query-1a87ca80c9929a172d60cbd334579c012e218944ec1f1f095c9308697878e39f.json  query-26d948b7e660d9766fbb4ca27fa963156e156bf0dadf8fb4ce29964a99d7c18e.json  query-289ec6a262f0b4175cc12d6758acd6dd394b29ead7232fc78d26b4bc2a2ba79c.json  query-37076a721a0cd0e1eefd633c6490be918d085d9b4cfa7194e97b1e522bb45911.json  query-40e1744a4ce9f522374384e48c230594bee3cd4e307c9a6991234722a7d2b7d2.json  query-413bd03d2899138920eb4175610394ddc6bffcba2684ab613c9cecfc77b90f23.json  query-4526e0e867e35eb5f90118302d121896e92a08f877031ebf831c64fc80290fa2.json  query-46362fbb2eedc6946a96fdff9cabcbbcbb3e1d1e34acff0562f0caa849ff46be.json  query-55135a79790e4ee1dd241013984915da006f2e0778675dfe31504af691a8fbcc.json  query-5a35f68df082454626607a581d6ef865ac62eb3ffcbfc4682300a84f453b7f53.json  query-611fa865f29cd9f4dd407956c20fbc8372ed5aea2ad6c47b302246b1997bff12.json  (+21 more)
db/: db_init.sql
src/: api.rs  (+5 more)
(+26 files in other folders)
