[package]
name = "sdmm"
version = "0.3.5"
edition = "2024"
description = "Manage your SD models"

[dependencies]
anyhow = "1.0"
actix-web = { version = "4.14" }
actix-files = "0.6"
actix-multipart = { version = "0.8" }
actix-cors = "0.7"
actix-web-lab = "0.26"
actix-web-httpauth = "0.8"
clap = { version = "4.6", features = ["derive"] }
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
tokio-stream = {version = "0.1"}
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "sqlite", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = {version = "2.0", features = ["glob_fs"]}
jwalk = "0.8"
blake3 = "1.8"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "stream", "rustls"] }
dotenvy = "0.15"
infer = "0.19"
indexmap = "2.14"
parking_lot = "0.12"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.7"

[features]
default = []

[profile.release]
strip = true
lto = true
codegen-units = 1

# Compile-time verified queries do quite a bit of work at compile time.
# Incremental actions like cargo check and cargo build can be significantly faster when using an optimized build
[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
opt-level = 1 # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3
